<resources>
    <string name="app_name">Mega Sena</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Overview</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="nav_header_title">Mega Sena</string>
    <string name="nav_header_subtitle">Good Luck</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>

    <string name="title_activity_play_lottery">Play</string>
    <string name="play_button">play</string>
    <string name="cancel_button">Cancel</string>
    <string name="my_play_number">my numbers</string>
    <string name="clean_play_button">Clean</string>
    <string name="nav_info">Home</string>
    <string name="nav_my_bets">My Bets</string>
    <string name="nav_tools">Tools</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="title_activity_lottery_location_maps">Map</string>
    <string name="google_maps_key">AIzaSyCaNSgoYxqTWjDP3hMJZcuNnK3R-00pdDU</string>
    <string name="title_activity_lotery_location">Localization of Lottery</string>
    <string name="title_activity_lottery_location">Localization</string>
    <string name="close_button">Close</string>
    <string name="nav_map">Lottery Location</string>
    <string name="share_result">Share Result</string>
    <string name="call_result">Win! Call someone</string>
    <string name="no_items_found">No items found</string>
    <string name="you_are_here">You are here</string>
    <string name="access_location_permission">Mega Sena needs to access your location</string>
    <string name="access_location_permission_title">Permission request</string>
    <string name="share_you_win">You win! Share</string>
    <string name="caixa_lottery_result_uri">http://loterias.caixa.gov.br/wps/portal/loterias/landing/megasena/</string>
    <string name="mininum_lottery_numbers">You should select at least 6 numbers</string>
    <string name="not_yet_singup">Not yet registered? Sign Up</string>
    <string name="already_member_signin">Already a member? Login</string>
    <string name="author">Tiago Novaes Dias</string>
    <string name="version">v1.0</string>
    <string name="loading_data">Loading data...</string>
    <string name="last_lottery_number">Last lottery</string>
    <string name="date_last_lottery">Date</string>
    <string name="lottery_selected_numbers">Numbers</string>
    <string name="numbers">Numbers</string>
    <string name="lottery">lottery</string>
</resources>
