<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_info" />
        <item
            android:id="@+id/nav_my_bets"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_my_bets" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    <item android:title="+">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_exit"
                android:title="@string/nav_exit" />
        </menu>
    </item>

</menu>
